--- a/back/package.json
+++ b/back/package.json
@@ -9,7 +9,8 @@
     "node": ">=18.0.0"
   },
   "scripts": {
-    "build": "nest build",
+    "prebuild": "npm install -g @nestjs/cli",
+    "build": "npx nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "node dist/main",
     "start:dev": "nest start --watch",
@@ -21,7 +22,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "postinstall": "nest build"
+    "postinstall": "npm install -g @nestjs/cli && nest build"
   },
   "dependencies": {
     "@nestjs/cli": "^11.0.0",
